--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-29-11 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>
+
+	* New version number 1.2
+	* NAMESPACE: Bug fix
+
 2010-02-11 Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>
 
 	* cpf: Code modifications to handle the changes made to 
